# postgresql-fixture

./: .envrc  .firstaide.toml  .gitignore  .travis.yml  CHANGELOG.md  Main.hs  Makefile  default.nix  postgresql-fixture.cabal  release.nix  shell.nix
nix/: pkgs.nix
nix/overlays/haskell/: default.nix
nix/overlays/ormolu/: default.nix
src/Database/PostgreSQL/: Cluster.hs  Consumers.hs  Fixture.hs  FixtureSpec.hs
src/Database/PostgreSQL/Fixture/: Cluster.hs  Consumers.hs  ConsumersSpec.hs  Ephemeral.hs  Settings.hs  Shared.hs  Util.hs  Version.hs  VersionSpec.hs
src/Database/Postgres/: Cluster.hs  Fixture.hs  FixtureSpec.hs
src/Database/Postgres/Fixture/: Settings.hs
test/: Main.hs
