cabal-version:
  >=1.10

-- Docs: http://haskell.org/cabal/users-guide/

name:
  postgresql-fixture
version:
  0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:
  LICENSE
author:
  NoRedInk
maintainer:
  eng@noredink.com
copyright:
  2019-2020 NoRedInk Corp.
-- category:
build-type:
  Simple
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    Database.PostgreSQL.Fixture
  other-modules:
    Database.PostgreSQL.Fixture.Cluster
    Database.PostgreSQL.Fixture.Consumers
    Database.PostgreSQL.Fixture.Ephemeral
    Database.PostgreSQL.Fixture.Settings
    Database.PostgreSQL.Fixture.Util
  build-depends:
    attoparsec, base, bytestring, containers, directory, filelock, filepath,
    network, postgresql-simple, resourcet, text, typed-process, unix
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    NamedFieldPuns
  ghc-options:
    -Wall

executable postgresql-fixture
  main-is:
    Main.hs
  build-depends:
    base, directory, filepath, unix, process, optparse-applicative
  default-language:
    Haskell2010
  default-extensions:
    NamedFieldPuns
  ghc-options:
    -Wall

test-suite test
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  other-modules:
    Database.PostgreSQL.Fixture
    Database.PostgreSQL.Fixture.Cluster
    Database.PostgreSQL.Fixture.Consumers
    Database.PostgreSQL.Fixture.Ephemeral
    Database.PostgreSQL.Fixture.Settings
    Database.PostgreSQL.Fixture.Util
    Database.PostgreSQL.FixtureSpec
  build-depends:
    attoparsec, base, bytestring, containers, directory, filelock, filepath,
    network, postgresql-simple, resourcet, tasty, tasty-hunit, text,
    typed-process, unix
  hs-source-dirs:
    src, test
  default-language:
    Haskell2010
  default-extensions:
    NamedFieldPuns
  ghc-options:
    -Wall
